# CrewAI-Dev-Agent

./: .gitignore  README.md  pyproject.toml  report.md  streamlit_app.py
knowledge/: SurfaceAnalyzer_Epic and user stories.docx  user_preference.txt
src/developeragent/: crew.py  main.py  streamlit_app.py
src/developeragent/config/: agents.yaml  tasks.yaml
