[project]
name = "developeragent"
version = "0.1.0"
description = "DeveloperAgent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
developeragent = "developeragent.main:run"
run_crew = "developeragent.main:run"
train = "developeragent.main:train"
replay = "developeragent.main:replay"
test = "developeragent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
